[gd_scene load_steps=15 format=3 uid="uid://dahye4vrj4edm"]

[ext_resource type="Script" uid="uid://f2nsnxmtl2pc" path="res://player.gd" id="1_owc7o"]
[ext_resource type="PackedScene" uid="uid://boag602y72ohi" path="res://Resources/Guns/pistol.tscn" id="2_hsrin"]
[ext_resource type="PackedScene" uid="uid://blumln7ifl2ds" path="res://PauseMenu.tscn" id="3_boutt"]
[ext_resource type="PackedScene" uid="uid://d1tgf53u0ayyd" path="res://Resources/Guns/p_90.tscn" id="3_h0br5"]
[ext_resource type="AudioStream" uid="uid://dxxj8libpdty7" path="res://Resources/Audio/SFX/FootSteps/gravel.mp3" id="5_qmpko"]
[ext_resource type="AudioStream" uid="uid://cuqcyv20ub4cj" path="res://Resources/Audio/SFX/Gunshots/pistol3.ogg" id="6_ew3qk"]
[ext_resource type="AudioStream" uid="uid://d1gs82oqvq0mt" path="res://Resources/Audio/SFX/Gunshots/weapswitch.ogg" id="7_8kg5c"]
[ext_resource type="AudioStream" uid="uid://5xf4ktxfga0g" path="res://Resources/Audio/SFX/Gunshots/gunshot_smg_shot_1-203471.wav" id="7_yx00q"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_foy8x"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_dnv3a"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="Animation" id="Animation_jihh7"]
resource_name = "LowPistol"
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.137, -2.482, 0.077), Vector3(-0.137, -2.852, 0.077)]
}

[sub_resource type="Animation" id="Animation_tee3o"]
resource_name = "LowSub"
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("P90:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.108, -0.05, -0.15), Vector3(0.108, -0.5, -0.15)]
}

[sub_resource type="Animation" id="Animation_4gq3t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("P90:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.108, -0.05, -0.15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.137, -2.482, 0.077)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vk2ej"]
_data = {
&"LowPistol": SubResource("Animation_jihh7"),
&"LowSub": SubResource("Animation_tee3o"),
&"RESET": SubResource("Animation_4gq3t")
}

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.1, 0.1, 0)
floor_max_angle = 1.0472
script = ExtResource("1_owc7o")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
layers = 3
mesh = SubResource("CapsuleMesh_foy8x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_dnv3a")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.58458, -0.1)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 80.0
far = 300.0

[node name="Pistol" parent="Head/Camera3D" instance=ExtResource("2_hsrin")]
transform = Transform3D(-4.37114e-08, 0.121869, 0.992546, 0, 0.992546, -0.121869, -1, -5.32708e-09, -4.33856e-08, -0.137, -2.482, 0.077)
visible = false

[node name="P90" parent="Head/Camera3D" instance=ExtResource("3_h0br5")]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 0.108, -0.05, -0.15)

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0442865, 0.117421, -0.4)
light_energy = 10.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_bake_mode = 0
distance_fade_enabled = true
spot_range = 8.5
spot_attenuation = 0.5

[node name="WeaponSwitch" type="AnimationPlayer" parent="Head/Camera3D"]
libraries = {
"": SubResource("AnimationLibrary_vk2ej")
}

[node name="PauseMenu" parent="." instance=ExtResource("3_boutt")]

[node name="SFX" type="Node3D" parent="."]

[node name="Walk" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("5_qmpko")

[node name="Run" type="AudioStreamPlayer3D" parent="SFX"]

[node name="GUNSHOT_pistol" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("6_ew3qk")

[node name="GUNSHOT_P90" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("7_yx00q")
emission_angle_enabled = true
emission_angle_degrees = 90.0

[node name="WeaponSwitch" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("7_8kg5c")
volume_db = 5.0
